--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,23 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.segment .inverted {
+  background-color: #333;
+}
+
+.inverted a {
+  color: #f44!important;
+}
+
+.inverted span {
+  color: #200;
+}
+
+.inverted h4 a {
+  color: #FFF!important;
+}
+
+.inverted .menu a {
+  color: #fff!important;
+}
