changed loading news to a single componentt; creating minimal theme skeleton

--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,8 @@ code {
 .inverted h4 a,
 .inverted .header,
 .inverted .ui.toggle.checkbox input:checked~label,
-.inverted .description {
+.inverted .description,
+.inverted td {
   color: #FFF!important;
 }
 
