--- a/src/index.css
+++ b/src/index.css
@@ -1,21 +1,28 @@
+@import url('https://fonts.googleapis.com/css?family=PT+Serif&display=swap')
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: 'PT Serif', serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+.segment {
+  font-family: 'PT Serif', serif;
 }
 
+#root {
+  background-color: #fbe6d9;
+}
+
+.main-container .inverted,
 .segment .inverted {
-  background-color: #333;
+  background-color: #333!important;
 }
-
+a {
+  color: #000;
+}
 .inverted a {
   color: #f44!important;
 }
@@ -31,6 +38,12 @@ code {
 .inverted td {
   color: #FFF!important;
 }
+.ui.basic.button {
+  color: purple;
+}
+.inverted .ui.basic.button {
+  color: red;
+}
 
 .dropdown .inverted {
   background-color: #333!important;
@@ -38,4 +51,44 @@ code {
 
 .inverted .menu a {
   color: #fff!important;
+}
+
+.ui.table,
+.ui.table tr td {
+ background: transparent!important;
+ border: 0;
+ padding: 0;
+}
+.ui.table a {
+  color: #444;
+}
+.ui.table a:hover {
+  color: purple;
+}
+.inverted a:hover {
+  color: #871b14!important;
+}
+.ui.compact.table td {
+  padding-top: 0.3em;
+  border-top: 0;
+  border-bottom: 0;
+
+}
+.minimal.news.row {
+  font-size: 1.2rem;
+  height: 40px;
+}
+
+.minimal.news.header {
+  font-weight: bolder;
+}
+.inverted .large.star {
+  color: #ebd936;
+}
+.large.star {
+  text-shadow: 0 0 3px #FFF;
+  color: #8f00af;
+}
+.large.star.outline {
+  text-shadow: none;
 }
