--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,13 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+.main-menu {
+  background-color: transparent!important;
+  -webkit-box-shadow: none!important;
+  box-shadow: none!important;
+  border: 0!important;
+}
+
 .ui.items>.item>.content>.header,
 .segment, .item {
   font-family: 'PT Serif', serif!important;
@@ -35,6 +42,8 @@ a:hover {
 }
 
 .inverted h4 a,
+.inverted .main-menu,
+.inverted .main-menu .item,
 .inverted .header,
 .inverted .ui.toggle.checkbox input:checked~label,
 .inverted .description,
