--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,10 @@ body {
   border: 0!important;
 }
 
+.inverted .main-menu {
+  background-color: #000!important;
+}
+
 .ui.items>.item>.content>.header,
 .segment, .item {
   font-family: 'PT Serif', serif!important;
